# clove

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CLOVE.md  Cargo.toml  HANDOFF.md  LICENSE-APACHE  README.md  deny.toml
.woodpecker/: deny.yml  (+6 more)
crates/clove/: Cargo.toml
crates/clove-core/: Cargo.toml
crates/clove-core/benches/: bench_graph.rs  bench_parse.rs  bench_scan.rs
crates/clove-core/src/: comments.rs  config.rs  doctor.rs  edit.rs  error.rs  fixtures.rs  graph.rs  id.rs  lib.rs  limits.rs  model.rs  ops.rs  parse.rs  repo.rs  stats.rs  store.rs  view.rs  write.rs
crates/clove-core/tests/: core_behavior.rs  fuzz_corpus.rs  perf_gates.rs
crates/clove-core/tests/fixtures/: full_item.md
crates/clove-import/: Cargo.toml
crates/clove-import-beads/: Cargo.toml
crates/clove-import-beads/src/: main.rs
crates/clove-import-tk/: Cargo.toml
crates/clove-import-tk/src/: main.rs
crates/clove-import/benches/: bench_export.rs  bench_import_beads.rs  bench_import_tk.rs
crates/clove-import/src/: beads.rs  beads_export.rs  error.rs  export.rs  github.rs  lib.rs  map.rs  merge.rs  plan.rs  render.rs  restore.rs  sync.rs  sync_net.rs  tk.rs
crates/clove-import/tests/: merge_props.rs
crates/clove-index/: Cargo.toml
crates/clove-index/benches/: index.rs
crates/clove-index/src/: db.rs  derive.rs  lib.rs  query.rs  reindex.rs  stale.rs  stats_store.rs  write.rs
crates/clove-index/tests/: incremental.rs  index_behavior.rs  index_parity.rs  index_perf_gates.rs  memory_footprint.rs  timing_breakdown.rs
crates/clove-ipc/: Cargo.toml
crates/clove-ipc/benches/: bench_frame.rs
crates/clove-ipc/src/: client.rs  frame.rs  lib.rs  protocol.rs  service.rs  spawn.rs  transport.rs
crates/clove-mcp/: Cargo.toml
crates/clove-mcp/src/: args.rs  engine.rs  lib.rs  server.rs
crates/clove-plugin/: Cargo.toml
crates/clove-plugin-echo/: Cargo.toml
crates/clove-plugin-echo/src/: main.rs
crates/clove-plugin/src/: clap_util.rs  context.rs  envelope.rs  lib.rs  run.rs
crates/clove-sync-github/: Cargo.toml
crates/clove-sync-github/src/: main.rs
crates/clove-tui/: Cargo.toml
crates/clove-tui/assets/fonts/: README.md
crates/clove-tui/src/: app.rs  lib.rs  markdown.rs  snapshot.rs  ui.rs
crates/clove-tui/src/app/: data.rs  detail.rs  filter_menu.rs  form.rs  listing.rs  mod.rs
crates/clove-tui/src/snapshots/: clove_tui__snapshot__blocked_tab_landscape.snap  clove_tui__snapshot__blocked_tab_portrait.snap  clove_tui__snapshot__blocked_tab_square.snap  clove_tui__snapshot__comments_landscape.snap  clove_tui__snapshot__comments_portrait.snap  clove_tui__snapshot__comments_square.snap  clove_tui__snapshot__dep_tree_landscape.snap  clove_tui__snapshot__dep_tree_portrait.snap  clove_tui__snapshot__dep_tree_square.snap  clove_tui__snapshot__detail_focused_landscape.snap  clove_tui__snapshot__detail_focused_portrait.snap  clove_tui__snapshot__detail_focused_square.snap  clove_tui__snapshot__edit_form_landscape.snap  clove_tui__snapshot__edit_form_portrait.snap  clove_tui__snapshot__edit_form_square.snap  clove_tui__snapshot__empty_repo_landscape.snap  clove_tui__snapshot__empty_repo_portrait.snap  clove_tui__snapshot__empty_repo_square.snap  clove_tui__snapshot__filter_menu_landscape.snap  clove_tui__snapshot__filter_menu_portrait.snap  clove_tui__snapshot__filter_menu_square.snap  clove_tui__snapshot__filtered_by_type_landscape.snap  clove_tui__snapshot__filtered_by_type_portrait.snap  clove_tui__snapshot__filtered_by_type_square.snap  clove_tui__snapshot__filtered_empty_landscape.snap  clove_tui__snapshot__filtered_empty_portrait.snap  clove_tui__snapshot__filtered_empty_square.snap  clove_tui__snapshot__help_overlay_landscape.snap  clove_tui__snapshot__help_overlay_portrait.snap  clove_tui__snapshot__help_overlay_square.snap  clove_tui__snapshot__new_form_caret_mid_text_landscape.snap  clove_tui__snapshot__new_form_caret_mid_text_portrait.snap  clove_tui__snapshot__new_form_caret_mid_text_square.snap  clove_tui__snapshot__new_form_landscape.snap  clove_tui__snapshot__new_form_portrait.snap  clove_tui__snapshot__new_form_square.snap  (+17 more)
crates/clove-types/: Cargo.toml
crates/clove-types/src/: error.rs  fields.rs  id.rs  lib.rs  limits.rs  model.rs  request.rs  validate.rs
crates/clove-web/: .gitignore  Cargo.toml  build.rs
crates/clove-web/src/: assets.rs  dto.rs  error.rs  events.rs  lib.rs  read.rs  watch.rs  write.rs
crates/clove-web/tests/: api.rs
crates/clove-web/web/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
crates/clove/src/: cli.rs  context.rs  exit.rs  item_json.rs  main.rs  mux_help.rs  output.rs  plugin.rs  util.rs
crates/clove/tests/: cli_commands.rs  cli_foundation.rs  cli_more.rs  daemon_cli.rs  daemon_routing.rs  export.rs  github_fallback.rs  golden_cli.rs  import_beads.rs  import_github.rs  import_json.rs  import_tk.rs  m2_scaffolding.rs  mcp.rs  merge_driver.rs  multiplexer_plugin.rs  plugin_dispatch.rs  plugin_registry.rs  schema_validation.rs  stats.rs  sync_github.rs
crates/cloved/: Cargo.toml
crates/cloved/src/: git_sync.rs  github_sync.rs  graph_cache.rs  ipc.rs  lifecycle.rs  main.rs  reindexer.rs  snapshot.rs  state.rs  watcher.rs
crates/cloved/tests/: daemon_git_sync.rs  daemon_ipc.rs  daemon_lifecycle.rs  daemon_watch.rs
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/import_beads/: seed_clove_export.jsonl  seed_deferred.jsonl  seed_malformed.jsonl  seed_multi.jsonl  seed_native.jsonl
fuzz/corpus/import_tk/: seed_full.md  seed_minimal.md  seed_no_h1.md  seed_plain.txt
fuzz/corpus/ipc_frame/: seed_junk_json  seed_ping  seed_pong_resp  seed_query_list  seed_status  seed_two_frames
fuzz/corpus/merge_driver/: seed_addadd  seed_clean  seed_single
fuzz/corpus/parse_dep_list/: junk_yaml  scalar_not_list  valid_list
fuzz/corpus/parse_item_file/: frontmatter_only.md  malformed_yaml.md  no_frontmatter.md  valid_full.md
fuzz/fuzz_targets/: import_beads.rs  import_tk.rs  ipc_frame.rs  merge_driver.rs  parse_dep_list.rs  parse_item_file.rs
(+164 files in other folders)
