[workspace]
resolver = "2"
members = [
    "crates/clove-types",
    "crates/clove-core",
    "crates/clove-index",
    "crates/clove-import",
    "crates/clove-ipc",
    "crates/clove-mcp",
    "crates/clove-tui",
    "crates/clove-web",
    "crates/clove",
    "crates/cloved",
    "xtask",
]
# The cargo-fuzz crate (T-X02) is its own workspace: it needs nightly + the
# libfuzzer sanitizer runtime, so it must not be built by the normal workspace.
exclude = ["fuzz"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Ege Apak"]
repository = "https://github.com/egeapak/clove"
homepage = "https://github.com/egeapak/clove"
keywords = ["issue-tracker", "git", "cli", "dependency-graph", "mcp"]
categories = ["command-line-utilities", "development-tools"]

# Pinned shared dependencies — see docs/DESIGN.md §1.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_neo = "0.11"         # strict YAML (maintained serde_yaml fork); DESIGN §4/§14.2 pinned 0.9 but crates.io only has 0.10/0.11
petgraph = { version = "0.6", default-features = false, features = ["stable_graph"] }  # DAG engine (graphmap/matrix_graph unused)
rusqlite = { version = "0.37", features = ["bundled"] }  # embedded SQLite, no runtime dep (M1). DESIGN §1 named 0.40, but its libsqlite3-sys 0.38 build script needs unstable `cfg_select!`; 0.37 (libsqlite3-sys 0.35) builds on the pinned toolchain and still bundles SQLite ≥3.43 for FTS5 contentless_delete.
# file-watch (M3); 9.0-rc is NOT production-ready — do not bump. We use the
# closure-callback watcher API, not the channel API, so drop the default
# `crossbeam-channel` feature (notify falls back to std mpsc internally).
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
interprocess = "2"              # Unix socket + Windows named pipe (M3)
# daemon/web/mcp async runtime. Trimmed from "full" to the union of features the
# release code actually uses (verified across cloved/clove-web/clove-mcp/
# clove-ipc/clove-import/clove): no tokio::process or tokio::fs anywhere. Test
# code that wants more gets `full` via per-crate [dev-dependencies] overrides.
tokio = { version = "1", features = [
    "rt-multi-thread",  # every runtime is new_multi_thread()/Runtime::new()
    "macros",           # tokio::select! (cloved) + #[tokio::test]
    "net",              # TcpListener/Stream (web) + interprocess sockets + hyper/octocrab
    "io-util",          # AsyncRead/WriteExt; rmcp transport-io
    "io-std",           # rmcp stdio transport (clove-mcp)
    "time",             # sleep/interval/timeout (cloved, clove-ipc, hyper)
    "sync",             # mpsc (watcher) + broadcast (web events)
    "signal",           # SIGTERM/ctrl_c shutdown (cloved)
] }
clap = { version = "4", features = ["derive"] }  # CLI only
anyhow = "1"                    # CLI + daemon only; never in clove-core
thiserror = "1"                 # clove-core + clove-index typed errors
proptest = "1"                  # property tests
criterion = "0.5"               # benchmarks
insta = "1"                     # snapshot tests
assert_cmd = "2"                # CLI integration tests
escargot = "0.5"                # build the sibling `cloved` bin on demand in tests
tempfile = "3"                  # atomic writes + test isolation
camino = "1"                    # UTF-8 paths throughout clove-core
smol_str = "0.3"                # inline IDs <=23 bytes (crate is smol_str, not smolstr)
getrandom = "0.2"               # ID entropy
memchr = "2"                    # fast frontmatter boundary scanning
blake3 = "1"                    # content hashing for staleness (M1)
rayon = "1"                     # parallel parse above 500 items
fd-lock = "4"                   # advisory file locking
git2 = "0.21"                   # M3 daemon git auto-sync only (vendored libgit2 C build blocks macOS->Windows cross-check; M0 worktree detection uses a `git` CLI wrapper instead)
# RFC3339 timestamps. clock = Utc::now() (used everywhere); drop the default
# `wasmbind` (no wasm target) and the legacy no-op `oldtime`.
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
# GitHub REST API client (clove-import, M2). Keep the default TLS/JWT providers
# (rustls-ring + jwt-rust-crypto) the working build relies on; drop only the
# unused middleware (retry/timeout/tracing).
octocrab = { version = "0.51", default-features = false, features = [
    "default-client", "follow-redirect", "rustls", "rustls-ring", "jwt-rust-crypto",
] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }  # octocrab/hyper-rustls pull BOTH ring + aws-lc-rs via feature unification, so rustls can't auto-pick a provider and panics on first TLS use; we install the ring provider explicitly (clove-import github feature)
toml = { version = "0.8", default-features = false, features = ["parse"] }  # config.toml parsing only (no serialize/display)
jsonschema = "0.46"             # JSON Schema validation in tests (T-CLI14)
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }  # terminal UI (M4 `clove tui`); drop unused underline-color
unicode-width = "0.2"           # display-column widths for TUI truncation/wrapping/caret (matches ratatui's own)
pulldown-cmark = { version = "0.13", default-features = false }  # Markdown body rendering in `clove tui`
# M4 MCP server: rmcp for the MCP (JSON-RPC stdio) surface; tarpc for the typed
# CLI<->daemon RPC seam (replaces the hand-rolled clove-ipc frame/protocol).
rmcp = { version = "1.7", default-features = false, features = ["server", "macros", "transport-io", "schemars"] }
tarpc = { version = "0.37", features = ["serde1", "serde-transport", "serde-transport-json", "tokio1", "unix"] }
futures = { version = "0.3", default-features = false, features = ["std"] }  # StreamExt only (cloved); drop default executor/async-await-macro
tokio-util = { version = "0.7", features = ["codec"] }   # LengthDelimited framing under tarpc serde-transport
tokio-serde = { version = "0.9", features = ["json"] }   # JSON codec for the tarpc transport
# M4 web UI (clove-web): HTTP/WS server + embedded SPA assets. All MIT, same
# tokio/hyper ecosystem already in the tree — no new cargo-deny license class.
# router + extractors + native WebSocket. API is JSON-only, so drop the default
# form/matched-path/original-uri/tower-log features (keep json+query+http1+tokio).
axum = { version = "0.7", default-features = false, features = ["http1", "json", "query", "tokio", "ws"] }
tower-http = { version = "0.6", features = ["compression-gzip"] }  # gzip-only response compression for the dynamic API (no brotli/zstd C deps in the binary)
rust-embed = "8"                # embed the gzip-precompressed SPA assets into the binary
mime_guess = "2"                # content-type for embedded static assets
flate2 = "1"                    # gzip the embedded assets (build script) + decompress them once at startup (pure-Rust miniz_oxide; no C deps)
futures-util = "0.3"            # WS stream/sink helpers for axum::extract::ws

# Internal crates (explicit version keeps them off cargo-deny's wildcard list
# and is required for publishing clove-core to crates.io — PRD §13).
clove-types = { path = "crates/clove-types", version = "0.1.0" }
clove-core = { path = "crates/clove-core", version = "0.1.0" }
clove-index = { path = "crates/clove-index", version = "0.1.0" }
clove-import = { path = "crates/clove-import", version = "0.1.0", default-features = false }
clove-ipc = { path = "crates/clove-ipc", version = "0.1.0" }
clove-mcp = { path = "crates/clove-mcp", version = "0.1.0" }
clove-tui = { path = "crates/clove-tui", version = "0.1.0" }
clove-web = { path = "crates/clove-web", version = "0.1.0" }

[profile.release]
lto = true            # fat LTO: cross-crate inlining/dedup; meaningfully smaller than "thin"
codegen-units = 1
panic = "abort"       # drop unwinding tables (no catch_unwind in-tree). `cargo test`/`bench` ignore this and keep unwind.
strip = true
