[package]
name = "clove-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
camino = "1"
clove-core = { path = "../crates/clove-core" }
# Merge-driver fuzz target needs only the pure merge logic; skip the GitHub
# feature (tokio/octocrab) so the fuzz build stays lean.
clove-import = { path = "../crates/clove-import", default-features = false }

[[bin]]
name = "parse_item_file"
path = "fuzz_targets/parse_item_file.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_dep_list"
path = "fuzz_targets/parse_dep_list.rs"
test = false
doc = false
bench = false

[[bin]]
name = "merge_driver"
path = "fuzz_targets/merge_driver.rs"
test = false
doc = false
bench = false

# Detach from the parent workspace — cargo-fuzz drives this crate on its own.
[workspace]
