[package]
name = "clove-core"
description = "clove core: item model, file store, dependency-graph engine, ID generation"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
# Benches are declared explicitly below; `benches/fixtures.rs`-style helpers are
# shared via the library, so disable bench auto-discovery.
autobenches = false

[dependencies]
serde.workspace = true
serde_yaml_neo.workspace = true
toml.workspace = true
thiserror.workspace = true
camino.workspace = true
smol_str = { workspace = true, features = ["serde"] }
getrandom.workspace = true
memchr.workspace = true
petgraph.workspace = true
chrono.workspace = true
rayon.workspace = true
fd-lock.workspace = true
tempfile.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
tempfile.workspace = true
serde_json.workspace = true
criterion.workspace = true        # T-X01 performance benchmarks

# T-X01: file-store performance benchmarks (DESIGN.md §13.1). Run with
# `cargo bench -p clove-core`; CI runs `cargo bench --no-run` as a compile gate.
# The enforced timing thresholds live in `tests/perf_gates.rs`.
[[bench]]
name = "bench_parse"
harness = false

[[bench]]
name = "bench_scan"
harness = false

[[bench]]
name = "bench_graph"
harness = false
