[package]
name = "clove-import"
description = "clove importers/exporters: beads, tk, github"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# File-based importers (beads/tk) use only clove-core; the GitHub
# importer/exporter (T-M03) adds tokio + octocrab behind the `github` feature so
# non-GitHub / lean builds (`--no-default-features`) stay free of that weight.
[features]
default = ["github"]
github = ["dep:octocrab", "dep:tokio", "dep:rustls"]

[dependencies]
clove-types.workspace = true
clove-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_neo.workspace = true
camino.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true

# GitHub-only deps, gated behind the `github` feature.
octocrab = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
# rustls is pulled transitively by octocrab/hyper-rustls with BOTH the ring and
# aws-lc-rs providers compiled in (feature unification), so rustls cannot pick a
# default and panics on first TLS use. We depend on it directly (ring) to install
# the ring provider explicitly before building the client (see github.rs).
rustls = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true     # T-X01: export throughput bench (informational)
tempfile.workspace = true
camino.workspace = true
proptest.workspace = true      # T-M05: set-merge invariant property tests

[[bench]]
name = "bench_export"
harness = false

[[bench]]
name = "bench_import_tk"
harness = false

[[bench]]
name = "bench_import_beads"
harness = false
