[package]
name = "clove-import"
description = "clove importers/exporters: beads, tk, github"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# File-based importers (beads/tk) use only clove-core; the GitHub
# importer/exporter (T-M03) adds tokio + octocrab behind the `github` feature so
# non-GitHub / lean builds (`--no-default-features`) stay free of that weight.
[features]
default = ["github"]
github = ["dep:octocrab", "dep:tokio", "dep:rustls", "dep:fd-lock"]

[dependencies]
clove-types.workspace = true
clove-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_neo.workspace = true
camino.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
# Stable, versioned content hash for the persisted comment-dedup fingerprints.
# std's DefaultHasher is explicitly unstable across Rust releases, so a persisted
# hash must not use it (see `sync::body_hash`); blake3 is the project's chosen
# content hasher (clove-core) and is fixed across releases/machines.
blake3.workspace = true

# GitHub-only deps, gated behind the `github` feature.
octocrab = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
# rustls is pulled transitively by octocrab/hyper-rustls with BOTH the ring and
# aws-lc-rs providers compiled in (feature unification), so rustls cannot pick a
# default and panics on first TLS use. We depend on it directly (ring) to install
# the ring provider explicitly before building the client (see github.rs).
rustls = { workspace = true, optional = true }
# Advisory lock so a daemon sync and a manual `clove sync` of the same repo can't
# interleave (which could create duplicate issues). github-only.
fd-lock = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true     # T-X01: export throughput bench (informational)
tempfile.workspace = true
camino.workspace = true
proptest.workspace = true      # T-M05: set-merge invariant property tests

[[bench]]
name = "bench_export"
harness = false

[[bench]]
name = "bench_import_tk"
harness = false

[[bench]]
name = "bench_import_beads"
harness = false
