[package]
name = "clove-web"
description = "clove web UI: HTTP/WebSocket server and embedded SPA (M4)"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clove-core.workspace = true
clove-index.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
camino.workspace = true
chrono.workspace = true
notify.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
flate2.workspace = true
futures-util.workspace = true

[build-dependencies]
flate2.workspace = true

[dev-dependencies]
tempfile.workspace = true
