[package]
name = "clove"
description = "clove: a fast, git-native, dependency-aware work-item tracker"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
default-run = "clove"

[[bin]]
name = "clove"
path = "src/main.rs"

# The `github` feature wires `import github` / `export github` through to
# clove-import's GitHub (octocrab/tokio) layer. Default-on; a lean build can opt
# out with `--no-default-features`, in which case those arms return a clean error.
[features]
default = ["github", "mcp"]
github = ["clove-import/github"]
# `mcp` wires the `clove mcp` subcommand to the clove-mcp (rmcp) server. Default-on,
# mirroring `github`; `--no-default-features` drops it (the subcommand then errors
# cleanly) for lean/cross builds.
mcp = ["dep:clove-mcp"]

[dependencies]
clove-types.workspace = true
clove-core.workspace = true
clove-index.workspace = true
clove-import = { workspace = true, default-features = false }   # M2 import/export/merge-driver; `github` via this crate's `github` feature
clove-ipc.workspace = true       # M3: daemon liveness probe + QUERY routing
clove-mcp = { workspace = true, optional = true }   # M4: `clove mcp` server (rmcp), behind the `mcp` feature
clove-tui.workspace = true       # M4: `clove tui` read-only terminal browser
clove-web.workspace = true       # M4: `clove serve` web UI server
tokio.workspace = true           # M4: async runtime for `clove serve`
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
camino.workspace = true
chrono.workspace = true
tempfile.workspace = true       # T-M04: atomic `export --out FILE` writes

# `clove daemon stop` on Windows signals the daemon's named event (DESIGN §8.9).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    # See cloved/Cargo.toml: OpenEventW/SetEvent reach SECURITY_ATTRIBUTES via
    # Win32_Security; required explicitly for the windows-gnu target.
    "Win32_Security",
    "Win32_System_Threading",
] }

[dev-dependencies]
assert_cmd.workspace = true
fd-lock.workspace = true          # hold the sync lock to test concurrent-sync rejection
insta = { workspace = true, features = ["json"] }       # golden CLI snapshot tests (T-X01 acceptance gate)
tempfile.workspace = true
jsonschema.workspace = true       # T-CLI14: validate JSON output against v1 schema
rusqlite.workspace = true         # doctor: stamp an old index user_version to exercise INDEX_SCHEMA_MISMATCH
