[package]
name = "clove"
description = "clove: a fast, git-native, dependency-aware work-item tracker"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
default-run = "clove"

[[bin]]
name = "clove"
path = "src/main.rs"

# `github` wires `clove sync github` (and `import/export github`) through to
# clove-import's GitHub (octocrab/tokio) layer — ~3.5 MB of vendored TLS/HTTP.
# It is **opt-out**: NOT in `default`, so a plain `cargo build` / `cargo install`
# is lean and the sync arm returns a clean "built without github support" error.
# Build with `--features github` (or `--features full`) to enable it; the
# pre-built release artifacts are built `--features full` so they retain sync.
[features]
default = ["mcp"]
full = ["github", "mcp"]
github = ["clove-import/github"]
# `mcp` wires the `clove mcp` subcommand to the clove-mcp (rmcp) server. Kept in
# `default` (it is small); `--no-default-features` drops it (the subcommand then
# errors cleanly) for the leanest cross builds.
mcp = ["dep:clove-mcp"]

[dependencies]
clove-types.workspace = true
clove-core.workspace = true
clove-index.workspace = true
clove-import = { workspace = true, default-features = false }   # M2 import/export/merge-driver; `github` via this crate's `github` feature
clove-ipc.workspace = true       # M3: daemon liveness probe + QUERY routing
clove-mcp = { workspace = true, optional = true }   # M4: `clove mcp` server (rmcp), behind the `mcp` feature
clove-tui.workspace = true       # M4: `clove tui` terminal browser + add/edit form
clove-web.workspace = true       # M4: `clove serve` web UI server
tokio.workspace = true           # M4: async runtime for `clove serve`
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
camino.workspace = true
chrono.workspace = true
tempfile.workspace = true       # T-M04: atomic `export --out FILE` writes

# `clove daemon stop` on Windows signals the daemon's named event (DESIGN §8.9).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    # See cloved/Cargo.toml: OpenEventW/SetEvent reach SECURITY_ATTRIBUTES via
    # Win32_Security; required explicitly for the windows-gnu target.
    "Win32_Security",
    "Win32_System_Threading",
] }

[dev-dependencies]
assert_cmd.workspace = true
escargot.workspace = true         # build the sibling `cloved` bin for the daemon-auto-start test
fd-lock.workspace = true          # hold the sync lock to test concurrent-sync rejection
insta = { workspace = true, features = ["json"] }       # golden CLI snapshot tests (T-X01 acceptance gate)
tempfile.workspace = true
jsonschema.workspace = true       # T-CLI14: validate JSON output against v1 schema
rusqlite.workspace = true         # doctor: stamp an old index user_version to exercise INDEX_SCHEMA_MISMATCH
